# OmniParserCustomized

./: demo.py  demo_cpu.py  pyproject.toml  simple_detr.py
flash_attn_dummy/: setup.py
flash_attn_dummy/flash_attn/: __init__.py  bert_padding.py
flash_attn_dummy/flash_attn.egg-info/: PKG-INFO  SOURCES.txt
util/: omniparser.py  utils.py
